fix up styling for stretch marks / type pages

--- a/style.css
+++ b/style.css
@@ -71,6 +71,41 @@ img.small {
     margin-left: 50px;
 }
 
+/* Stretch Marks */
+#stretch-marks-body {
+    background-color: rgb(215, 215, 215);
+}
+.instruction-text {
+    padding-top: 50px;
+    color: rgb(185, 185, 185);
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+    color: rgb(146, 146, 146);
+    background-color: rgb(215, 215, 215);
+    cursor: pointer;
+    /* padding: 18px; */
+    margin-top: 100px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+    /* background-color: red; */
+  }
+
 
 
 /* music */
@@ -86,7 +121,7 @@ img.small {
 
 /* p5.js */
 .p5 {
-    padding-top: 50px;
+    padding-top: 100px;
 }
 
 img.blog-img {
